mobile: set a width for navigation popover to it's always 3 columns

--- a/core/css/mobile.css
+++ b/core/css/mobile.css
@@ -34,8 +34,7 @@
 #navigation {
 	top: 45px;
 	bottom: initial;
-	width: 90%;
-	max-width: 320px;
+	width: 255px;
 	max-height: 90%;
 	margin-top: 0;
 	top: 45px;
