adding ellipsis on file names to public file list as well

--- a/apps/files_sharing/css/mobile.css
+++ b/apps/files_sharing/css/mobile.css
@@ -45,5 +45,13 @@ table td.filename .nametext {
 	display: none;
 }
 
+/* ellipsis on file names */
+.nametext {
+	width: 60%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 
 }
