--- a/core/css/icons.css
+++ b/core/css/icons.css
@@ -372,3 +372,7 @@ img.icon-loading-small-dark, object.icon-loading-small-dark, video.icon-loading-
 .icon-picture {
 	background-image: url('../img/places/picture.svg');
 }
+
+.icon-clippy {
+	background-image: url('../img/actions/clippy.svg');
+}
