Use an icon to set the email instead of a button with string

--- a/apps/files_sharing/css/sharetabview.css
+++ b/apps/files_sharing/css/sharetabview.css
@@ -30,6 +30,7 @@
 	margin-left: 0;
 }
 .shareTabView input[type="text"].shareWithField,
+.shareTabView input[type="text"].emailField,
 .shareTabView input[type="text"].linkText {
 	width: 80%;
 }
