--- a/core/css/icons.css
+++ b/core/css/icons.css
@@ -204,6 +204,10 @@ img.icon-loading-small-dark, object.icon-loading-small-dark, video.icon-loading-
 	background-image: url('../img/actions/mail.svg');
 }
 
+.icon-mail-grey {
+	background-image: url('../img/actions/mail-grey.svg');
+}
+
 .icon-menu {
 	background-image: url('../img/actions/menu.svg');
 }
