Add new "Recent files" icon to files app (#356)
* Added new "nav-icon-recent" CSS class

Added the class "nav-icon-recent" to display the new "recent files" file list view to be added by @icewind1991 in PR https://github.com/nextcloud/server/pull/292

It's now placed after nav-icon-files which was where @jancborchardt was suggesting iirc.

* Add new "Recent files" clock icon

Add the new icon for "Recent files" file list view in the files app by @icewind1991, as discussed in PR https://github.com/nextcloud/server/pull/292

Icon is already compressed/cleaned by scour rather than svgo as svgo seems to corrupt it.

* Alter colour of "Recent" icon from grey to black

Change colour of the "recently used files" icon from grey to black, to match other icons in the files app.

* Replace recent icon with black, optimized version

Just updates the colour of the icon for "Recent files" from a grey version, to a black optimised version.

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -89,6 +89,9 @@
 .nav-icon-files {
 	background-image: url('../img/folder.svg');
 }
+.nav-icon-recent {
+	background-image: url('../img/recent.svg');
+}
 .nav-icon-favorites {
 	background-image: url('../img/star.svg');
 }
