--- a/core/css/header.css
+++ b/core/css/header.css
@@ -71,7 +71,7 @@
 	background-image: url('../img/logo-icon.svg');
 	background-repeat: no-repeat;
 	background-size: 175px;
-	background-position: center 30px;
+	background-position: center;
 	width: 252px;
 	height: 120px;
 	margin: 0 auto;
